--- a/paper/conclusion.tex
+++ b/paper/conclusion.tex
@@ -1,11 +1,7 @@
 \section{Conclusion}
 
-In this study we explored how a machine learning model can \textit{learn how to learn} and generalise using only a few examples. This study builds on the work from \citet{altae2017low}, who have set important foundations for this problem domain. 
+In this study, we explored if a machine learning model can \textit{learn how to learn}, and generalise using only a few examples in the virtual screening domain. This study builds on the work from \citet{altae2017low}, who have set important foundations for this domain. We reproduce their work effectively and provide deeper insights into the study by introducing PR-AUC reporting, in addition to the reported ROC-AUC scores in their study to increase robustness against highly imbalanced data. We also introduce Prototypical Networks and Relation Networks, two new few-shot machine learning models, to this domain, and compare results to the state-of-the-art.
 
-First, we reproduce their work effectively and provide deeper insights into the study by introducing PR-AUC reporting, over and above the ROC-AUC scores, to account for the highly imbalanced data. 
+While performance varies across the datasets used, this difference is consistent with the reported results from \citet{altae2017low}. The Prototypical Networks outperform all other machine learning models, including the state-of-the-art model, based on ROC-AUC and PR-AUC performance on the Tox21 dataset. Additionally, given the highly imbalanced nature of the data, our PR-AUC results provide more robust insights into the performance of the models. The state-of-the-art and the Prototypical Networks perform significantly better than our implementation of Relation Networks. We also observe that Prototypical Networks achieve this improved performance with much faster training times than our implementation of the state-of-the-art. 
 
-Second, we also introduce two new few-shot machine learning models, namely the Protoypical Networks and Relation Networks, and explore their performance against the state of the art. The Prototypical and Relation Networks have been previously explored for the computer vision domain, but to our knowledge, have never been applied to the drug discovery domain. 
-
-While our results vary across the datasets used, they are consistent with the work of \citet{altae2017low}. The Prototypical Networks we introduce to this problem domain perform better on the Tox21 dataset based on ROC-AUC performance, while outperforming all other machine learning models in PR-AUC performance. We believe that this is a valuable contribution as, in addition to obtaining better results than the state of the art, given the nature of the data used, the PR-AUC provides more reliable insight into the performance of the models. The same generalising capabilities is not achieved on MUV data due to the nature of the data available within this dataset. The results on the DUD-E data does not give a clear indication of performance, and the excellent results obtained on one DUD-E target raises questions about hidden bias within the data. Therefore, we conclude that few-shot machine learning is effective for low-data ligand-based virtual screening depending on the nature of the data used. For data such as MUV, in which active compounds per target are scarce and each compound is structurally distinct from all others, the few-shot learning models struggle to generalise well. We find that on the Tox21 datasets, the Prototypical network is the best performing network, with much faster training times than our implementation of the Matching Networks. Prototypical Networks dominate all other networks in PR-AUC scores, and also have a slight edge when comparing ROC-AUC scores compared to the state of the art. The state of the art and Prototypical Networks perform significantly better than our implementation of Relation Networks. Hence, we conclude that Prototypical Networks offer better generalising capabilities for few-shot learning in ligand-based virtual screening than the Matching Networks component in the state of the art.
-
-We also find that making use of learned embeddings through GCNs, as opposed to ECFPs, consistently results in better ROC-AUC and PR-AUC performance. For datasets in which the ligands provided are structurally distinct, holding no relationship whatsoever between them, the conventional machine learning techniques, used as a baseline in our experiments, perform better.
+The same generalising capabilities are not observed on MUV data, due to the nature of this data where active compounds per target are highly scarce, and each compound is structural distinct. Results on the DUD-E GPCR subset are also not conclusive and for these datasets, our baseline experiments using conventional machine learning techniques perform better. We conclude that Prototypical Networks offer better generalising capabilities for few-shot learning in ligand-based virtual screening than the Matching Networks component used in the state-of-the-art, however, this is dependent on the nature of the data used. Finally, we also observe that making use of learned embeddings through GCNs, as opposed to ECFPs, consistently results in better ROC-AUC and PR-AUC performances.
