added our first response to the reviewers (draft)

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -148,15 +148,6 @@ All the data used for the validation of this study (Tox21, DUD-E, and MUV) is pu
 	
 \end{datasoftware}
 
-\pagebreak
-\section{For Table of Contents Only}
-
-\begin{figure}[!ht]
-	\centering
-	\includegraphics[width=0.85\linewidth]{img/For Table of Contents Only.png}
-	\caption{Table of Contents/Abstract Graphic for Article}
-\end{figure}
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% The appropriate \bibliography command should be placed here.
 %% Notice that the class file automatically sets \bibliographystyle
@@ -164,7 +155,14 @@ All the data used for the validation of this study (Tox21, DUD-E, and MUV) is pu
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \bibliography{main.bib}
 
+\pagebreak
+\section{For Table of Contents Only}
 
+\begin{figure}[!ht]
+	\centering
+	\includegraphics[width=0.95\linewidth]{img/For Table of Contents Only.png}
+%%	\caption{Table of Contents/Abstract Graphic for Article}
+\end{figure}
 
 
 \end{document}
